--- a/JSCodeStreak/Day23/Day23.html
+++ b/JSCodeStreak/Day23/Day23.html
@@ -7,7 +7,7 @@
 
 <body>
 	<h1>30DaysOfJavaScript: Day 23</h1>
-	<h2>Manipulating DOM Objects</h2>
+	<h2>Event Listeners</h2>
     <button>Click Me</button>
 
 	<script src="Day23.js"></script>
