--- a/Advertisement_Poster/index.html
+++ b/Advertisement_Poster/index.html
@@ -6,19 +6,19 @@
     <body class="sec">
             <section class="sec">
                 <div class="bg">
-                    <img src="/NGO/images/background.png" alt="">
+                    <img src="/Advertisement_Poster/images/background.png" alt="">
                 </div>
             </section>
             
             <section class="sec">
                 <div class="top">
-                    <img src="/NGO/images/title.png" alt="">
+                    <img src="/Advertisement_Poster/images/title.png" alt="">
                 </div>
                 <div class="bottom">
-                    <img id="dog" src="/NGO/images/dog.png" alt="">
+                    <img id="dog" src="/Advertisement_Poster/images/dog.png" alt="">
                 </div>
                 <div class="cloud">
-                    <img src="/NGO/images/cloud.png" alt="">
+                    <img src="/Advertisement_Poster/images/cloud.png" alt="">
                 </div>
             </section> 
         
