--- a/Advertisement_Poster/index.html
+++ b/Advertisement_Poster/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title></title> 
+        <title>Dog Adoption Poster</title> 
         <link rel="stylesheet" href="/HTML5-JavaScript-Course/Advertisement_Poster/css/styles.css">   
     </head>
     <body class="sec">
